# cookiecutter-python-clean-architecture

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
