[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = "{{ cookiecutter.requires_python }}"
authors = [
    {email = "{{ cookiecutter.email }}", name = "{{ cookiecutter.full_name }}"},
]

[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "black==22.10.0",
]

[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = "tests/"

[tool.black]
line-length = 120
skip-string-normalization = 1

